--- a/03-flex-header-2/style.css
+++ b/03-flex-header-2/style.css
@@ -14,22 +14,20 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex; 
   justify-content: space-between;
-  align-items: center;
-  padding: 0px 10px;
+  padding: 8px;
+  margin: 0; 
 }
 
 .header-left {
     display: flex; 
-    justify-content: flex-start; 
     align-items: center;
-    gap: 15px;
+    gap: 16px;
 }
 
 .header-right {
     display: flex; 
-    justify-content: flex-end;
     align-items: center;
-    gap: 15px;
+    gap: 16px;
 }
 
 .profile-image {
@@ -66,4 +64,5 @@ ul {
   display: flex; 
   gap: 10px; 
   padding: 0;
+  margin: 0;
 }
