--- a/05-flex-modal/style.css
+++ b/05-flex-modal/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 html, body {
-  height: 100%;
+  height: 100vh;
+  /*this makes the body exactly the same height as the viewport!!*/
 }
 
 body {
