--- a/07-flex-layout-2/style.css
+++ b/07-flex-layout-2/style.css
@@ -1,34 +1,93 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    min-height: 100vh;
-    display: flex; 
-    flex-direction: column;
-    justify-content: space-between;
-    align-content: stretch;
-    gap: 0;
-  }
-  
-  .header {
-    height: 72px;
-    background: darkmagenta;
-    color: white;
-  }
-  
-  .footer {
-    height: 72px;
-    background: #eee;
-    color: darkmagenta;
-  }
-  
-  .sidebar {
-    width: 300px;
-    background: royalblue;
-    box-sizing: border-box;
-  }
-  
-  .card {
-    border: 1px solid #eee;
-    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-    border-radius: 4px;
-  }
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  min-height: 100vh;
+  display: flex; /*✔*/
+  flex-direction: column; /*✔*/
+}
+
+.header {
+  height: 72px;
+  background: #8b008b;
+  color: white;
+  font-size: 32px; /*✔*/
+  font-weight: 900; /*✔*/
+  padding: 0 16px; /*✔*/
+  /*flex: 1 1 0%;         NOT NECESSARY */
+ /* align-content: center;     BETTER USE FLEX */
+
+  /* SOLUTION */
+  display: flex;
+  align-items: center;
+}
+
+.body {
+  display: flex; /*✔*/
+  margin: 0 auto;
+  flex: 1; /*✔*/
+}
+
+.sidebar {
+  width: 300px;
+  background: royalblue;
+  box-sizing: border-box;
+  padding: 16px; /*✔*/
+  flex-shrink: 0;
+}
+
+.container {
+  /* flex: 1;         NOT NECESSARY*/
+  display: flex;  /*✔*/
+  flex-wrap: wrap; /*✔*/
+  gap: 32px; 
+  padding: 48px; /*✔*/
+  /* flex-shrink: 1;        NOT NECESSARY */
+
+}
+
+.card {
+  border: 1px solid #eee;
+  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  border-radius: 4px;
+  width: 300px;
+  padding: 16px; 
+  min-width: 100px; 
+  min-height: 100px;
+  line-height: 1; 
+  height: 220px; 
+}
+
+.footer {
+  height: 72px;
+  background: #eee;
+  color: darkmagenta;
+  font-weight:500;
+  /*SOLUTION*/ 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /*
+  This works but use Flex instead?
+  text-align: center; 
+  align-content: center;
+  */
+}
+
+ul { 
+  list-style-type: none; /*✔*/
+  color: white; 
+  /*This font-size can go in a*/
+  font-size: 24px;
+  padding: 0; /*✔*/
+  margin: 0; /*✔*/
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+a {
+  text-decoration: none;  /*✔*/
+  color: white;  /*✔*/
+}
+
